[tool.poetry]
name = "repl_python3_PyRandomFakerDictList"
version = "0.1.0"
description = ""
authors = ["sunupradana <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^11.3.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
